# mem01

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  PRODUCT.md  README.md  docker-compose.yml  pyproject.toml
examples/: basic_usage.py
src/mem01/: __init__.py  client.py  env.py  ids.py  metrics.py  runtime.py  tokens.py  types.py
src/mem01/api/: app.py
src/mem01/embeddings/: __init__.py  base.py  fake.py  openai_embedder.py
src/mem01/llm/: __init__.py  anthropic.py  base.py  fake.py  openai_compat.py
src/mem01/read/: __init__.py  conflict.py  pack.py  rank.py  recall.py  search.py
src/mem01/store/: __init__.py  base.py  factory.py  memory_store.py  postgres_store.py  sqlite_store.py
src/mem01/write/: __init__.py  apply_ops.py  extractor.py
tests/: conftest.py  test_api.py  test_apply_ops.py  test_client.py  test_configuration_docs.py  test_conflict.py  test_conflict_suite.py  test_extractor.py  test_factory.py  test_llm_adapters_unit.py  test_memory_store.py  test_multi_signal.py  test_postgres_store.py  test_rank_pack.py  test_recall.py  test_runtime.py  test_scaffold.py  test_search.py  test_sqlite_store.py  test_types.py
