[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mem01-engine"
version = "0.1.0"
description = "Belief-based agent memory: correct under evolution, cheap on recall"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "mem01" }]
dependencies = [
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "psycopg[binary,pool]>=3.1",
  "pgvector>=0.3",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]
openai = [
  "openai>=1.0",
  "httpx>=0.27",
]
eval = [
  "openai>=1.0",
  "httpx>=0.27",
  "mem0ai>=0.1",
]
mcp = [
  "mcp>=1.0",
]
all = [
  "mem01-engine[dev,openai,mcp]",
]

# Distribution name is mem01-engine; import package remains mem01.
[tool.hatch.build.targets.wheel]
packages = ["src/mem01"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "integration: needs real API keys / network",
  "postgres: needs DATABASE_URL with pgvector",
]

[tool.ruff]
line-length = 100
target-version = "py311"
